@startuml

title __RENDERER's Class Diagram__\n

  package Renderer {
    abstract class BouncerRenderer {
        {abstract} + display()
    }
  }
  

  package Renderer {
    class EmptyRenderer {
        {static} - instance : EmptyRenderer
        {static} + getInstance()
        + display()
    }
  }
  

  package Renderer {
    class FilledRenderer {
        {static} - instance : FilledRenderer
        {static} + getInstance()
        + display()
    }
  }
  

  package Renderer {
    interface Renderable {
        {abstract} + display()
    }
  }
  

  BouncerRenderer -up-|> Renderable
  EmptyRenderer -up-|> BouncerRenderer
  FilledRenderer -up-|> BouncerRenderer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
